# practical-python-projects

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  new_project_proposal.yml
.github/workflows/: quality.yml
advanced/: README.md
beginner/: README.md
beginner/01-expense-tracker/: PROJECT_PLAN.md  README.md  project.toml
beginner/01-expense-tracker/examples/: expenses.sample.json
beginner/01-expense-tracker/src/expense_tracker/: __init__.py  __main__.py  cli.py  errors.py  models.py  services.py  storage.py
beginner/01-expense-tracker/tests/: test_cli.py  test_models.py  test_services.py  test_storage.py
beginner/02-file-organizer/: PROJECT_PLAN.md  README.md  project.toml
beginner/02-file-organizer/examples/: categories.sample.json
beginner/02-file-organizer/src/file_organizer/: __init__.py  __main__.py  classify.py  cli.py  errors.py  executor.py  manifest.py  models.py  planner.py
beginner/02-file-organizer/tests/: test_classify.py  test_cli.py  test_executor.py  test_manifest.py  test_planner.py
beginner/03-number-guessing-game/: PROJECT_PLAN.md  README.md  project.toml
beginner/03-number-guessing-game/src/number_guessing_game/: __init__.py  __main__.py  cli.py  config.py  game.py
beginner/03-number-guessing-game/tests/: test_cli.py  test_game.py
beginner/04-password-generator/: PROJECT_PLAN.md  README.md  project.toml
beginner/04-password-generator/src/password_generator/: __init__.py  __main__.py  cli.py  errors.py  generator.py  policy.py
beginner/04-password-generator/tests/: test_cli.py  test_generator.py  test_policy.py
beginner/05-contact-book/: PROJECT_PLAN.md  README.md  project.toml
beginner/05-contact-book/src/contact_book/: __init__.py  __main__.py  cli.py  errors.py  export.py  models.py  service.py  storage.py  validation.py
beginner/05-contact-book/tests/: test_cli.py  test_export.py  test_service.py  test_storage.py  test_validation.py
docs/: README.md  brand-guidelines.md  learning-paths.md  project-catalog.md  project-metadata.md  repository-map.md  roadmap.md
docs/architecture/: ADR-0001-repository-model.md  ADR-0002-dependency-and-lockfile-strategy.md  ADR-0003-project-layout-and-metadata.md  README.md
docs/getting-started/: README.md  development-environment.md
docs/launch/: v0.1.0-announcement.md
docs/maintainers/: README.md  adding-a-project.md  assumptions.md  ci.md  generated-content.md  github-settings.md  labels.md
docs/releases/: release-process.md  v0.1.0.md
scripts/: __init__.py  check_internal_links.py  check_repository.py  generate_project_index.py  validate_project_metadata.py
templates/project/: PROJECT_PLAN.template.md  README.template.md  project.template.toml  pyproject.template.toml  test_example.template.py
tests/: test_check_internal_links.py  test_check_repository.py  test_generate_project_index.py  test_repository_metadata.py  test_validate_project_metadata.py
