[project]
name = "practical-python-projects"
version = "0.0.0"
description = "Root tooling for the Practical Python Projects repository."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "vietIT2002" }]

# The repository root is a non-published tooling project, not a distributable
# package. It owns shared development tooling, quality gates, and validation for
# the collection of independent learning projects (see ADR-0001).
[tool.uv]
package = false

# Development toolchain shared across the repository. Runtime dependencies live
# inside individual learning projects, never here (see ADR-0002).
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"
# Self-contained projects (their own deps + lockfile) are checked in their own
# environment via a dedicated CI job, not by the root toolchain.
extend-exclude = [".ai", "intermediate/01-url-shortener-api"]

[tool.ruff.lint]
# Sensible, teachable default rule set. Individual projects may extend this.
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["expense_tracker", "file_organizer", "scripts"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = [
    "beginner/01-expense-tracker/src",
    "beginner/02-file-organizer/src",
]
# Project source is type-checked; per-project test suites share basenames
# (e.g. test_cli.py) across projects, so they are checked by pytest, not mypy.
exclude = [
    '^\.venv/',
    '^\.ai/',
    '/tests/.*',
    '^tests/.*',
    '^intermediate/01-url-shortener-api/',
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
testpaths = [
    "tests",
    "beginner/01-expense-tracker/tests",
    "beginner/02-file-organizer/tests",
]
pythonpath = [
    ".",
    "beginner/01-expense-tracker/src",
    "beginner/02-file-organizer/src",
]
markers = [
    "integration: local multi-component test",
    "network: requires external network access; excluded by default",
    "slow: intentionally slower than the normal development loop",
]

[tool.coverage.run]
branch = true
source = ["scripts", "expense_tracker", "file_organizer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
